@@ -1,88 +1,82 @@
 buildscript {
 
     ext.versions = [
-            kotlin            : '1.7.10',
-            coroutines        : '1.6.4',
-            dagger            : '2.43',
-            hiltWorkManager   : '1.0.0',
-            hiltCompose       : '1.0.0',
-            soraSdk           : '0.3.10',
-            timber            : '5.0.1',
-            gson              : '2.9.0',
-            firebaseBom       : '29.3.1',
-            googlePlayCore    : '1.10.3',
-            material          : '1.6.1',
-            swipe             : '1.1.0',
-            constraint        : '2.1.4',
-            crashlytics       : '17.4.1',
-            iroha             : '5.1.2',
-            shimmer           : '0.5.0',
-            novaCrypto        : '2019.01.27',
-            spongycastle      : '1.58.0.0',
-            navigation        : '2.5.0',
-            zXing             : '3.3.3',
-            zXingEmbedded     : '4.3.0@aar',
-            picasso           : '2.8',
-            jUnit             : '4.12',
-            mockito           : '4.4.0',
-            robolectric       : '4.1',
-            archCoreTest      : '2.1.0',
-            archFragmentTest  : '1.4.1',
-            archComponents    : '2.5.0-beta01',
-            room              : '2.4.2',
-            datastore         : '1.0.0',
-            googleAuthApiPhone: '17.1.0',
-            googleAuthApi     : '17.0.0',
-            biometric         : '1.0.1',
-            web3j             : '4.2.0-android',
-            workManager       : '2.7.1',
-            emoji             : '0.9.0',
-            activityKtx       : '1.5.1',
-            fragmentKtx       : '1.5.1',
-            coreKtx           : '1.8.0',
-            fearlessLib       : '1.0.111',
-            webSocketLib      : '2.14',
-            ed25519           : '2.0.1',
-            svgVersion        : '1.4',
-            jdenticonVersion  : '1.0',
-            insetter          : '0.6.0',
-            viewBinding       : '1.5.6',
-            runtimePermissions: '1.1.2',
-            progressButton    : '2.1.0',
-            truth             : '1.1.3',
-            neumorphism       : '0.3.0',
-            swipeButton       : '0.9.0',
-            lottie            : '4.2.0',
-            xNetworking       : '0.0.37',
-            compose           : '1.2.0-rc03',
-            composeCompiler   : '1.3.0-beta01',
-            composeNeumorph   : '1.0.0-alpha02',
-            uiCore            : '0.0.11',
-            lazySodium        : '5.0.2',
-            jna               : '5.8.0'
+            kotlin                 : '1.8.20',
+            coroutines             : '1.6.4',
+            dagger                 : '2.45',
+            hiltWorkManager        : '1.0.0',
+            hiltCompose            : '1.0.0',
+            timber                 : '5.0.1',
+            gson                   : '2.10.1',
+            firebaseBom            : '31.1.1',
+            googlePlayCore         : '1.10.3',
+            constraint             : '2.2.0-alpha05',
+            soraSdk                : '0.3.10',
+            iroha                  : '5.1.2',
+            novaCrypto             : '2019.01.27',
+            spongycastle           : '1.58.0.0',
+            ed25519                : '2.0.1',
+            web3j                  : '4.2.0-android',
+            fearlessLib            : '1.0.117',
+            navigation             : '2.5.0',
+            zXing                  : '3.3.3',
+            zXingEmbedded          : '4.3.0@aar',
+            coil                   : '2.2.2',
+            jUnit                  : '4.13.2',
+            mockito                : '5.2.0',
+            robolectric            : '4.1',
+            archCoreTest           : '2.1.0',
+            archFragmentTest       : '1.4.1',
+            archComponents         : '2.6.1',
+            room                   : '2.5.1',
+            datastore              : '1.0.0',
+            biometric              : '1.1.0',
+            workManager            : '2.8.1',
+            webSocketLib           : '2.14',
+            svgVersion             : '1.4',
+            jdenticonVersion       : '1.0',
+            insetter               : '0.6.0',
+            runtimePermissions     : '1.1.2',
+            truth                  : '1.1.3',
+            lottie                 : '4.2.0',
+            xNetworking            : '0.0.56',
+            compose                : '1.4.3',
+            composeMaterial        : '1.4.3',
+            composeCompiler        : '1.4.6',
+            composeConstraintLayout: '1.1.0-alpha05',
+            uiCore                 : '0.0.68',
+            soraCard               : '0.0.41',
+            lazySodium             : '5.0.2',
+            jna                    : '5.8.0',
+            accompanist            : '0.30.1',
+            xserializationjson     : '1.5.0',
+            composeMaterialDialog  : '0.9.0',
+            ktor                   : '2.2.3'
     ]
 
     ext {
-        // soralution 74 2.5.1.6 2022.11.09
-        // sora dae 73 2.5.1.6 2022.11.10
-        appVersionCode = Integer.valueOf(System.env.BUILD_NUMBER ?: 73)
-        appVersionName = '2.5.1.6'
+        // soralution 93 3.0.0.15 2023.05.03
+        // sora dae 79 3.0.0.1 2023.05.18
+        appVersionCode = Integer.valueOf(System.env.BUILD_NUMBER ?: 79)
+        appVersionName = '3.0.0.1'
 
         compileVersion = 33
         minVersion = 24
         targetVersion = 33
+        soraMinifyRelease = true
 
-        kotlinDep = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
-        kotlinReflectDep = "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
-        androidDep = "androidx.appcompat:appcompat:1.5.0-rc01"
+        //kotlinDep = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
+        //kotlinReflectDep = "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
+        kotlinxSerializationJsonDep = "org.jetbrains.kotlinx:kotlinx-serialization-json:$versions.xserializationjson"
+        androidDep = "androidx.appcompat:appcompat:1.6.1"
+        appCompatResourcesDep = "androidx.appcompat:appcompat-resources:1.6.1"
         biometricDep = "androidx.biometric:biometric:$versions.biometric"
-        materialDep = "com.google.android.material:material:$versions.material"
+        materialDep = "com.google.android.material:material:1.9.0"
         cardViewDep = "androidx.cardview:cardview:1.0.0"
         constraintDep = "androidx.constraintlayout:constraintlayout:$versions.constraint"
-        swipelayoutDep = "androidx.swiperefreshlayout:swiperefreshlayout:$versions.swipe"
-        activityKtxDep = "androidx.activity:activity-ktx:$versions.activityKtx"
-        fragmentKtxDep = "androidx.fragment:fragment-ktx:$versions.fragmentKtx"
-        coreKtxDep = "androidx.core:core-ktx:$versions.coreKtx"
+        activityKtxDep = "androidx.activity:activity-ktx:1.7.1"
+        fragmentKtxDep = "androidx.fragment:fragment-ktx:1.5.7"
+        coreKtxDep = "androidx.core:core-ktx:1.10.1"
 
         workManagerDep = "androidx.work:work-runtime-ktx:$versions.workManager"
         coroutineDep = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
@@ -118,23 +112,22 @@ buildscript {
         datastoreDep = "androidx.datastore:datastore-preferences:$versions.datastore"
 
         insetterDep = "dev.chrisbanes.insetter:insetter:$versions.insetter"
-        viewBindingDep = "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$versions.viewBinding"
 
         irohaDep = "com.github.hyperledger.iroha-java:client:$versions.iroha"
         soraDep = "com.github.soramitsu:sora-sdk:$versions.soraSdk"
         fearlessLibDep = "jp.co.soramitsu.fearless-utils:fearless-utils:$versions.fearlessLib"
         xNetworkingDep = "jp.co.soramitsu:XNetworking-android:$versions.xNetworking"
+        ktorWebSocketDep = "io.ktor:ktor-client-websockets:$versions.ktor"
         webSocketLibDep = "com.neovisionaries:nv-websocket-client:$versions.webSocketLib"
         uiCoreDep = "jp.co.soramitsu:ui-core:$versions.uiCore"
+
+        soraCardDep = "jp.co.soramitsu:android-sora-card:$versions.soraCard"
 
         gsonDep = "com.google.code.gson:gson:$versions.gson"
 
         crashlyticsDep = "com.google.firebase:firebase-crashlytics-ktx"
         googlePlayCoreDep = "com.google.android.play:core:$versions.googlePlayCore"
         firebaseBomDep = "com.google.firebase:firebase-bom:$versions.firebaseBom"
-
-        shimmerDep = "com.facebook.shimmer:shimmer:$versions.shimmer"
-        swipeButtonDep = "com.ncorti:slidetoact:$versions.swipeButton"
 
         novaCryptoDep = "io.github.novacrypto:BIP39:$versions.novaCrypto"
         ed25519Dep = "com.github.warchant:ed25519-sha3-java:$versions.ed25519"
@@ -147,41 +140,70 @@ buildscript {
         zXingCoreDep = "com.google.zxing:core:$versions.zXing"
         zXingEmbeddedDep = "com.journeyapps:zxing-android-embedded:$versions.zXingEmbedded"
 
-        picassoDep = "com.squareup.picasso:picasso:$versions.picasso"
-
-        emojiDep = "com.vanniktech:emoji-google:$versions.emoji"
-        neumorphismDep = "com.github.fornewid:neumorphism:$versions.neumorphism"
+        coilDep = "io.coil-kt:coil:$versions.coil"
+        coilSvgDep = "io.coil-kt:coil-svg:$versions.coil"
+        coilComposeDep = "io.coil-kt:coil-compose:$versions.coil"
 
         web3jDep = "org.web3j:core:$versions.web3j"
+
+        composeMaterialDialogDep = "io.github.vanpra.compose-material-dialogs:core:$versions.composeMaterialDialog"
 
         runtimePermissionsDep = "com.github.florent37:runtime-permission-kotlin:$versions.runtimePermissions"
 
         jUnitDep = "junit:junit:$versions.jUnit"
         mockitoDep = "org.mockito:mockito-inline:$versions.mockito"
-        mockitoKotlinDep = "org.mockito.kotlin:mockito-kotlin:4.0.0"
-        mockkDep = "io.mockk:mockk:1.12.4"
-        powerMockDep = "org.powermock:powermock-module-junit4:2.0.2"
-        powerMockMockitoDep = "org.powermock:powermock-api-mockito2:2.0.2"
-        robolectricDep = "org.robolectric:robolectric:$versions.robolectric"
-        robolectricMultidexDep = "org.robolectric:shadows-multidex:$versions.robolectric"
+        mockitoKotlinDep = "org.mockito.kotlin:mockito-kotlin:4.1.0"
+        mockkDep = "io.mockk:mockk:1.13.5"
+//        powerMockDep = "org.powermock:powermock-module-junit4:2.0.2"
+//        powerMockMockitoDep = "org.powermock:powermock-api-mockito2:2.0.2"
+//        robolectricDep = "org.robolectric:robolectric:$versions.robolectric" {
+//            exclude group: 'org.apache.maven', module: 'maven-artifact'
+//            exclude group: 'org.apache.maven', module: 'maven-artifact-manager'
+//            exclude group: 'org.apache.maven', module: 'maven-model'
+//            exclude group: 'org.apache.maven', module: 'maven-plugin-registry'
+//            exclude group: 'org.apache.maven', module: 'maven-profile'
+//            exclude group: 'org.apache.maven', module: 'maven-project'
+//            exclude group: 'org.apache.maven', module: 'maven-settings'
+//            exclude group: 'org.apache.maven', module: 'maven-error-diagnostics'
+//            exclude group: 'org.apache.maven', module: 'maven-ant-tasks'
+//            exclude group: "org.apache.maven.wagon"
+//            exclude group: "org.codehaus.plexus"
+//        }
+//        robolectricMultidexDep = "org.robolectric:shadows-multidex:$versions.robolectric"
         archCoreTestDep = "androidx.arch.core:core-testing:$versions.archCoreTest"
         archFragmentTestDep = "androidx.fragment:fragment-testing:$versions.archFragmentTest"
         truthDep = "com.google.truth:truth:$versions.truth"
+//        core
+//        androidxTestCoreDep = "androidx.test:core:1.5.0"
+//        AndroidJUnitRunner and JUnit Rules
+//        androidxTestRunnerDep = "androidx.test:runner:1.5.0"
+//        androidxTestRulesDep = "androidx.test:rules:1.5.0"
+//        Assertions
+        androidxTestExtJunitDep = "androidx.test.ext:junit:1.1.5"
+//        androidxTestExtTruthDep = "androidx.test.ext:truth:1.5.0"
+//        Espresso dependencies
+        androidxTestEspressoCoreDep = "androidx.test.espresso:espresso-core:3.5.1"
+//        androidxTestEspressoContribDep = "androidx.test.espresso:espresso-contrib:3.5.0"
+//        androidxTestEspressoIntentsDep = "androidx.test.espresso:espresso-intents:3.5.0"
+//        androidxTestEspressoAccessibilityDep = "androidx.test.espresso:espresso-accessibility:3.5.0"
+//        androidxTestEspressoWebDep = "androidx.test.espresso:espresso-web:3.5.0"
 
         composeUiDep = "androidx.compose.ui:ui:$versions.compose"
         composeLiveDataDep = "androidx.compose.runtime:runtime-livedata:$versions.compose"
-        composeCompilerDep = "androidx.compose.compiler:compiler:$versions.composeCompiler"
         composeFoundationDep = "androidx.compose.foundation:foundation:$versions.compose"
         composeRuntimeDep = "androidx.compose.runtime:runtime:$versions.compose"
-        composeMaterialDep = "androidx.compose.material:material:$versions.compose"
-        composeThemeAdapterDep = "com.google.android.material:compose-theme-adapter:1.1.1"
+        composeMaterialDep = "androidx.compose.material:material:$versions.composeMaterial"
+        composeThemeAdapterDep = "com.google.accompanist:accompanist-themeadapter-material:$versions.accompanist"
         composeAnimationDep = "androidx.compose.animation:animation:$versions.compose"
         composeAnimationGraphicsDep = "androidx.compose.animation:animation-graphics:$versions.compose"
         composeToolingDep = "androidx.compose.ui:ui-tooling:$versions.compose"
         composeToolingPreviewDep = "androidx.compose.ui:ui-tooling-preview:$versions.compose"
-        composeActivityDep = "androidx.activity:activity-compose:1.5.1"
-        composeViewModelDep = "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
-        composeNeumorphDep = "me.nikhilchaudhari:composeNeumorphism:$versions.composeNeumorph"
+        composeActivityDep = "androidx.activity:activity-compose:1.7.1"
+        composeViewModelDep = "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+        composeLifecycleDep = "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+        composeConstraintLayoutDep = "androidx.constraintlayout:constraintlayout-compose:$versions.composeConstraintLayout"
+
+        accompanistNavAnimationDep = "com.google.accompanist:accompanist-navigation-animation:$versions.accompanist"
 
         lazySodiumDep = "com.goterl:lazysodium-android:$versions.lazySodium@aar"
         jnaDep = "net.java.dev.jna:jna:$versions.jna@aar"
@@ -193,17 +215,21 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.android.tools.build:gradle:7.3.1'
-        classpath 'com.google.gms:google-services:4.3.14'
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:${versions.kotlin}"
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.2.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.45'
+        classpath "com.github.triplet.gradle:play-publisher:3.7.0"
     }
 }
 
 plugins {
     id "org.sonarqube" version "2.7"
 }
+
+apply from: 'secrets.gradle'
 
 allprojects {
     repositories {
@@ -224,6 +250,14 @@ allprojects {
         maven {
             url "https://jcenter.bintray.com/"
         }
+
+        maven {
+            setUrl(readSecret("PAY_WINGS_REPOSITORY_URL"))
+            credentials {
+                username = readSecret("PAY_WINGS_USERNAME")
+                password = readSecret("PAY_WINGS_PASSWORD")
+            }
+        }
     }
 }
 
@@ -236,7 +270,7 @@ configurations {
 }
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.46.1") {
+    ktlint("com.pinterest:ktlint:0.49.1") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
@@ -248,7 +282,7 @@ task ktlint(type: JavaExec, group: "verification") {
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args "--reporter=plain"
-    args "--android"
+    args "--code-style=android_studio"
     args "--reporter=checkstyle,output=${project.buildDir}/reports/checkstyle/ktlint.xml"
     args "$project.rootDir/**/src/main/**/*.kt"
 }
@@ -257,6 +291,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
-    args "--android"
+    args "--code-style=android_studio"
 }
